// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listed tool surfaces > profile "chatgpt" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach_artifact": "4e755103cedaef62",
  "orgx_cancel_work": "ccb74312b1ea6639",
  "orgx_capture_decision": "7289eb8b6e0bf444",
  "orgx_check_execution_readiness": "69f01847ce64790e",
  "orgx_complete_plan": "d9e6c70cd7265a01",
  "orgx_complete_work_with_proof": "e4b7711301bee06c",
  "orgx_create_initiative": "24889a2a731caa32",
  "orgx_create_initiative_hierarchy": "72e7010ead3d9c92",
  "orgx_create_milestone": "cfd64e0aa2e43672",
  "orgx_create_task": "4162b7d8fa272028",
  "orgx_create_workstream": "87b34cc6035b563b",
  "orgx_estimate_agent_task": "d2a8f63a72933de7",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_next_actions": "8e3f10dc3617f51c",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "1f21c0765f1a7908",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_handoff_task": "e8dd3fe3dccab5d2",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "632dbbddf2ef4f6e",
  "orgx_open_decision_review": "934d973f51234257",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "ab044c9340939cf5",
  "orgx_read_plan": "26a06f954b3d4414",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_request_independent_artifact_review": "9c09ef856d5dcd9e",
  "orgx_resume_work": "ef0de71f3defa82d",
  "orgx_retry_work": "9789894662bcb497",
  "orgx_save_plan": "434c8855d8120257",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_start_agent_task": "d28107dc80fdfde4",
  "orgx_start_plan": "27c2e556d801d91c",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_update_work": "9b315a591dacbd15",
  "orgx_validate_initiative_plan": "76fc65c4c1da98f3",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "claude-code-legacy" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "c51f36b15f1ac6c5",
  "get_initiative_pulse": "8000ba7d77f34876",
  "get_morning_brief": "3ee60fbf0050b478",
  "get_operator_chronicle": "8b05da24982c6e13",
  "orgx_inspect": "5391adc5fc80b2dd",
  "orgx_recommend": "61739aa3d5d17839",
  "orgx_search": "0aacb73c0e411b87",
}
`;

exports[`listed tool surfaces > profile "claude-directory" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach_artifact": "ab443fe198b5a91d",
  "orgx_cancel_work": "391ad7912a997be1",
  "orgx_capture_decision": "c1f5cfd845f19587",
  "orgx_check_execution_readiness": "77f5bbfc2826be16",
  "orgx_complete_plan": "515a8cb5d986bd8e",
  "orgx_complete_work_with_proof": "4303d5b492ae45ba",
  "orgx_create_initiative": "7abe8f6ee4bc2087",
  "orgx_create_initiative_hierarchy": "f3c7183fd7842ee6",
  "orgx_create_milestone": "70f5774bbbe12bf7",
  "orgx_create_task": "002497f4f6524e93",
  "orgx_create_workstream": "1fbbb00666cbad2b",
  "orgx_estimate_agent_task": "e87506d0c0628b0b",
  "orgx_get_agent_status": "78d2984321e6ceff",
  "orgx_get_initiative_progress": "99a277fef25de7cb",
  "orgx_get_next_actions": "3035adcfb2e4f899",
  "orgx_get_operation_status": "fbda363f44d51717",
  "orgx_get_operator_brief": "640991f6d54b3c15",
  "orgx_get_receipt_review_queue": "8dce238268666de0",
  "orgx_get_work_receipt": "ed0d4c59add4a7c3",
  "orgx_get_workspace_context": "1c0f37a97dbfffe1",
  "orgx_handoff_task": "2e866e00fd678c67",
  "orgx_inspect": "d60251319b238b00",
  "orgx_launch_initiative": "5e41d2b0b7f0cc27",
  "orgx_list_pending_decisions": "0b7e244b94647212",
  "orgx_list_work_receipts": "774f51039880cd40",
  "orgx_open_artifact_review": "8751125a4234772a",
  "orgx_open_decision_review": "b1aea83c51b1694d",
  "orgx_panel_snapshot": "15d481c807c188c8",
  "orgx_pause_work": "344e350bdb34150e",
  "orgx_read_plan": "8df3609d01866c6e",
  "orgx_record_plan_edit": "2685d224f2e5c707",
  "orgx_request_independent_artifact_review": "74a358de604ace13",
  "orgx_resume_work": "cd88eabd1375f272",
  "orgx_retry_work": "e3a93f1ebb28f558",
  "orgx_save_plan": "85e8af96b3867fb3",
  "orgx_search": "9fc56b7a94ce9919",
  "orgx_start_agent_task": "b765ddef435725bb",
  "orgx_start_plan": "7c58a7de37d587c6",
  "orgx_submit_work_receipt": "aff26e1f15df7ea8",
  "orgx_update_work": "ddd6119684a8216c",
  "orgx_validate_initiative_plan": "956a324fa0e6e2ae",
  "orgx_validate_work_receipt": "00d41b90e033aa62",
  "orgx_widget_approve_artifact": "ee5af8ea54d78fe2",
  "orgx_widget_decide": "6c2df3aca0d2b4d3",
  "orgx_widget_receipt_call": "089ffc7f37e03f30",
  "orgx_widget_request_artifact_changes": "13d806d8ea72e2ae",
  "orgx_widget_select_workspace": "7d97b107c32653a1",
  "resume_agent_run": "90b388a6df57d58e",
}
`;

exports[`listed tool surfaces > profile "claude-directory-legacy" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "71a53b732c85a37f",
  "get_agent_status": "aabaee8b6a8b22fb",
  "get_initiative_pulse": "35fa8e49f8e7a6be",
  "get_morning_brief": "f216afcf9c323e3f",
  "get_operator_chronicle": "ceffe8cd1cf36fc4",
  "manage_lifecycle": "33875ee01fd0d1c8",
  "orgx_attach": "9a7a339c628a6fea",
  "orgx_bootstrap": "12a87414cb4367fd",
  "orgx_change_entity_state": "bc721c58237c212f",
  "orgx_check_delegation": "14f312a9fdc40cf4",
  "orgx_command_status": "522c3ff992d06b93",
  "orgx_complete_plan": "e7c5ebf07c2cbc2b",
  "orgx_complete_with_proof": "a90c6483779720fa",
  "orgx_create_entity": "2c1055a58d3fa8ea",
  "orgx_delegate_work": "0d5a8b3782faf082",
  "orgx_get_agent_status": "78d2984321e6ceff",
  "orgx_get_initiative_progress": "99a277fef25de7cb",
  "orgx_get_operation_status": "fbda363f44d51717",
  "orgx_get_operator_brief": "640991f6d54b3c15",
  "orgx_get_workspace_context": "1c0f37a97dbfffe1",
  "orgx_improve_plan": "27f6794c76d7ef15",
  "orgx_inspect": "d60251319b238b00",
  "orgx_list_pending_decisions": "9a4b719a73a9cbc9",
  "orgx_open_decision_review": "0f697667832bead8",
  "orgx_read_plan": "e6250b7d2ceae871",
  "orgx_recommend": "7d4b00772504a14d",
  "orgx_record_decision": "f2d63d447b44aa7a",
  "orgx_record_plan_edit": "37328b752436a7dc",
  "orgx_search": "9fc56b7a94ce9919",
  "orgx_start_plan": "773d88d8e7e0c555",
  "orgx_submit_receipt": "cb3ff52ace678434",
  "orgx_update_entity": "ad26ef92f9c0e32b",
  "orgx_widget_approve_artifact": "ee5af8ea54d78fe2",
  "orgx_widget_decide": "6c2df3aca0d2b4d3",
  "orgx_widget_request_artifact_changes": "13d806d8ea72e2ae",
  "resume_agent_run": "90b388a6df57d58e",
  "review_artifact": "fffa3af8e120f00c",
}
`;

exports[`listed tool surfaces > profile "claude-plugin" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "f266cd0d63726471",
  "get_initiative_pulse": "3fec5846643f8987",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
}
`;

exports[`listed tool surfaces > profile "commander" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_write": "83d98b5670c2e8b9",
  "resume_agent_run": "5c016323dee7914e",
  "scaffold_initiative": "21fd5da8fea984b6",
}
`;

exports[`listed tool surfaces > profile "executor" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_write": "83d98b5670c2e8b9",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "extended" lists byte-identical tool descriptors 1`] = `
{
  "orgx_activate_work": "742d12fe0e1fe0fa",
  "orgx_archive_work": "ac314ccb8ff25339",
  "orgx_attach_artifact": "4e755103cedaef62",
  "orgx_block_work": "7f5fe7813940179b",
  "orgx_cancel_work": "ccb74312b1ea6639",
  "orgx_capture_decision": "7289eb8b6e0bf444",
  "orgx_check_agent_delegation": "c0adcf4b3d51779e",
  "orgx_check_execution_readiness": "69f01847ce64790e",
  "orgx_classify_agent_task": "7fdf179eb3280396",
  "orgx_complete_entity": "7aa17745e9a994c2",
  "orgx_complete_plan": "d9e6c70cd7265a01",
  "orgx_complete_work_with_proof": "e4b7711301bee06c",
  "orgx_create_and_launch_initiative_hierarchy": "b65c07ed4d7def44",
  "orgx_create_and_start_agent_task": "00a7ebd8c2e33d2a",
  "orgx_create_decision": "4e4e9c5222ac055d",
  "orgx_create_initiative": "24889a2a731caa32",
  "orgx_create_initiative_hierarchy": "72e7010ead3d9c92",
  "orgx_create_milestone": "cfd64e0aa2e43672",
  "orgx_create_task": "4162b7d8fa272028",
  "orgx_create_workstream": "87b34cc6035b563b",
  "orgx_delete_work": "08b12c9043a79f19",
  "orgx_estimate_agent_task": "d2a8f63a72933de7",
  "orgx_flag_risk_work": "a3be9d1dd9d5a336",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_next_actions": "8e3f10dc3617f51c",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "1f21c0765f1a7908",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_handoff_task": "e8dd3fe3dccab5d2",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "632dbbddf2ef4f6e",
  "orgx_open_decision_approval_review": "e9007fe721c000a9",
  "orgx_open_decision_rejection_review": "0ba7aa08a459403d",
  "orgx_open_decision_review": "934d973f51234257",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "ab044c9340939cf5",
  "orgx_read_plan": "26a06f954b3d4414",
  "orgx_reassign_streams_work": "0ae86eb4fe0e3f84",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_reopen_work": "5a8630dceb1f98e6",
  "orgx_request_independent_artifact_review": "9c09ef856d5dcd9e",
  "orgx_request_plan_critique": "89e4d2c4b69dacee",
  "orgx_resume_work": "ef0de71f3defa82d",
  "orgx_retry_work": "9789894662bcb497",
  "orgx_save_plan": "434c8855d8120257",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_ship_batch_work": "d84e12fc69ca1fbd",
  "orgx_start_agent_task": "d28107dc80fdfde4",
  "orgx_start_plan": "27c2e556d801d91c",
  "orgx_start_work": "89ed9283a6b8e71d",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_unblock_work": "ade1005d56541bb1",
  "orgx_update_work": "9b315a591dacbd15",
  "orgx_validate_initiative_plan": "76fc65c4c1da98f3",
  "orgx_validate_studio_content": "4d93340000bb67a9",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "full" lists byte-identical tool descriptors 1`] = `
{
  "account_status": "3780d8aa7fa4183c",
  "account_upgrade": "89f745acc1a28f56",
  "account_usage_report": "da047ce753cf6d71",
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "batch_action": "1c587cc9617bd819",
  "batch_create_entities": "2f127a87b52bfcc0",
  "batch_delete_entities": "697c1a123e7522f2",
  "check_execution_readiness": "8654b94408726684",
  "check_spawn_guard": "e5224687a58937f5",
  "classify_task_model": "ca122096a65b7b90",
  "comment_on_entity": "cc095a2101a4dc67",
  "complete_plan": "669bfa016250d582",
  "configure_org": "5e067157f6de4a23",
  "configure_outcome_type": "cb02470d0e404c76",
  "consolidate_pr": "6abba9a7b56106c6",
  "create_decision": "8fb6a22d7ec5e370",
  "create_entity": "230c44c01cf09cf9",
  "create_milestone": "c302e98c9c12e849",
  "create_task": "94df618311eaf4ce",
  "delegate_agent_task": "ae624f12057af3f8",
  "entity_action": "e98271e996dad3af",
  "get_active_sessions": "37d81ba0695ed5eb",
  "get_agent_status": "f266cd0d63726471",
  "get_decision_history": "0f148975624fc365",
  "get_initiative_pulse": "3fec5846643f8987",
  "get_initiative_stream_state": "622513234e9f4010",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_my_trust_context": "4a9071597260d592",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "get_org_snapshot": "b30ff821487ebaf7",
  "get_outcome_attribution": "a82005d4d9d1d163",
  "get_pending_decisions": "b60b5c890b6407dc",
  "get_relevant_learnings": "0baed2d7ea3869de",
  "get_scoring_signals": "a1e70a55763364c1",
  "get_task_with_context": "123676ee529920a1",
  "handoff_task": "d4d652946ed1a6f8",
  "improve_plan": "a3e512f1d600e83c",
  "list_entities": "7418bced289fe206",
  "list_entity_comments": "3c0fbaf5bf750e92",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_activate_work": "742d12fe0e1fe0fa",
  "orgx_apply_changeset": "efa7b2ed216c06f0",
  "orgx_archive_work": "ac314ccb8ff25339",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_attach_artifact": "4e755103cedaef62",
  "orgx_block_work": "7f5fe7813940179b",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_cancel_work": "ccb74312b1ea6639",
  "orgx_capture_decision": "7289eb8b6e0bf444",
  "orgx_check_agent_delegation": "c0adcf4b3d51779e",
  "orgx_check_execution_readiness": "69f01847ce64790e",
  "orgx_classify_agent_task": "7fdf179eb3280396",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_entity": "7aa17745e9a994c2",
  "orgx_complete_plan": "d9e6c70cd7265a01",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_complete_work_with_proof": "e4b7711301bee06c",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_create_and_launch_initiative_hierarchy": "b65c07ed4d7def44",
  "orgx_create_and_start_agent_task": "00a7ebd8c2e33d2a",
  "orgx_create_decision": "4e4e9c5222ac055d",
  "orgx_create_initiative": "24889a2a731caa32",
  "orgx_create_initiative_hierarchy": "72e7010ead3d9c92",
  "orgx_create_milestone": "cfd64e0aa2e43672",
  "orgx_create_task": "4162b7d8fa272028",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_create_workstream": "87b34cc6035b563b",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_delete_work": "08b12c9043a79f19",
  "orgx_describe_action": "a6dde8e9c3c2fe72",
  "orgx_describe_tool": "d7334c7342534ed7",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_estimate_agent_task": "d2a8f63a72933de7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_flag_risk_work": "a3be9d1dd9d5a336",
  "orgx_free_audit": "2564eefddf9d0826",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_next_actions": "8e3f10dc3617f51c",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "1f21c0765f1a7908",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_handoff_task": "e8dd3fe3dccab5d2",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_lease": "a0cd51b65bf2ebc9",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "632dbbddf2ef4f6e",
  "orgx_open_decision_approval_review": "e9007fe721c000a9",
  "orgx_open_decision_rejection_review": "0ba7aa08a459403d",
  "orgx_open_decision_review": "934d973f51234257",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "ab044c9340939cf5",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_read_plan": "26a06f954b3d4414",
  "orgx_reassign_streams_work": "0ae86eb4fe0e3f84",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_reopen_work": "5a8630dceb1f98e6",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_independent_artifact_review": "9c09ef856d5dcd9e",
  "orgx_request_plan_critique": "89e4d2c4b69dacee",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_resume_work": "ef0de71f3defa82d",
  "orgx_retry_work": "9789894662bcb497",
  "orgx_save_plan": "434c8855d8120257",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_ship_batch_work": "d84e12fc69ca1fbd",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_start_agent_task": "d28107dc80fdfde4",
  "orgx_start_plan": "27c2e556d801d91c",
  "orgx_start_work": "89ed9283a6b8e71d",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_unblock_work": "ade1005d56541bb1",
  "orgx_update_work": "9b315a591dacbd15",
  "orgx_validate_initiative_plan": "76fc65c4c1da98f3",
  "orgx_validate_studio_content": "4d93340000bb67a9",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "orgx_write": "83d98b5670c2e8b9",
  "pin_workstream": "264a1edf7eda05aa",
  "query_org_memory": "b992a8515583399b",
  "queue_action": "3d27e6294a02761d",
  "recall_memory": "6092409b0d5bc26b",
  "recommend_next_action": "3916a8a4d2c7525d",
  "record_outcome": "ee4624f4f5b7513b",
  "record_plan_edit": "707737413b3c4ba5",
  "record_quality_score": "e99358b33099cc14",
  "reject_decision": "c5bedfd37dd63ed2",
  "remember_decision": "ab09b087806033a2",
  "request_independent_artifact_review": "57cf65c7729ecfd4",
  "resume_agent_run": "5c016323dee7914e",
  "resume_plan_session": "b836de74a1f20d0a",
  "review_artifact": "326e48293c3f656d",
  "save_artifact": "a79f894f98f20294",
  "scaffold_initiative": "21fd5da8fea984b6",
  "score_next_up_queue": "48c368c412cb805e",
  "scoring_config": "978827eec8a0dbc8",
  "spawn_agent_task": "7564e8148f1ad541",
  "start_autonomous_session": "a5705112639e35b5",
  "start_plan_session": "4e41aad2cbd94bc3",
  "stats": "fce830c9981265c4",
  "submit_learning": "bc02887779c7f0a6",
  "sync_client_state": "62c42527e1fee26f",
  "track_project_progress": "4580c88252fd709e",
  "update_entity": "9dba71debab229fa",
  "update_stream_progress": "1d975e8c143e6581",
  "validate_studio_content": "d13ac4168277e7bc",
  "verify_entity_completion": "51b74544d263526e",
  "workspace": "ee60cd85919387e7",
}
`;

exports[`listed tool surfaces > profile "legacy" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "delegate_agent_task": "ae624f12057af3f8",
  "get_agent_status": "f266cd0d63726471",
  "get_initiative_pulse": "3fec5846643f8987",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "handoff_task": "d4d652946ed1a6f8",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_work_receipt": "1f21c0765f1a7908",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "orgx_write": "83d98b5670c2e8b9",
  "query_org_memory": "b992a8515583399b",
  "recall_memory": "6092409b0d5bc26b",
  "recommend_next_action": "3916a8a4d2c7525d",
  "reject_decision": "c5bedfd37dd63ed2",
  "request_independent_artifact_review": "57cf65c7729ecfd4",
  "resume_agent_run": "5c016323dee7914e",
  "review_artifact": "326e48293c3f656d",
  "scaffold_initiative": "21fd5da8fea984b6",
  "spawn_agent_task": "7564e8148f1ad541",
  "track_project_progress": "4580c88252fd709e",
}
`;

exports[`listed tool surfaces > profile "memory" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_widget_decide": "75098f2ae324724f",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "observer" lists byte-identical tool descriptors 1`] = `
{
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_decide": "75098f2ae324724f",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "planner" lists byte-identical tool descriptors 1`] = `
{
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_write": "83d98b5670c2e8b9",
  "resume_agent_run": "5c016323dee7914e",
  "scaffold_initiative": "21fd5da8fea984b6",
}
`;

exports[`listed tool surfaces > profile "read-only" lists byte-identical tool descriptors 1`] = `
{
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_next_actions": "8e3f10dc3617f51c",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_search": "55045ee6898f8bf9",
}
`;

exports[`listed tool surfaces > profile "v2" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach_artifact": "4e755103cedaef62",
  "orgx_cancel_work": "ccb74312b1ea6639",
  "orgx_capture_decision": "7289eb8b6e0bf444",
  "orgx_check_execution_readiness": "69f01847ce64790e",
  "orgx_complete_plan": "d9e6c70cd7265a01",
  "orgx_complete_work_with_proof": "e4b7711301bee06c",
  "orgx_create_initiative": "24889a2a731caa32",
  "orgx_create_initiative_hierarchy": "72e7010ead3d9c92",
  "orgx_create_milestone": "cfd64e0aa2e43672",
  "orgx_create_task": "4162b7d8fa272028",
  "orgx_create_workstream": "87b34cc6035b563b",
  "orgx_estimate_agent_task": "d2a8f63a72933de7",
  "orgx_get_agent_status": "1c0b085e5b401707",
  "orgx_get_initiative_progress": "cbe3a225b95b76f1",
  "orgx_get_next_actions": "8e3f10dc3617f51c",
  "orgx_get_operation_status": "64ffb200bb718e12",
  "orgx_get_operator_brief": "916ab39c119ed08d",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "1f21c0765f1a7908",
  "orgx_get_workspace_context": "a59b9501ab05b139",
  "orgx_handoff_task": "e8dd3fe3dccab5d2",
  "orgx_inspect": "b32b4b5827b546fc",
  "orgx_launch_initiative": "5f926aa71eb1a4f0",
  "orgx_list_pending_decisions": "4f106796ef1659bd",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "632dbbddf2ef4f6e",
  "orgx_open_decision_review": "934d973f51234257",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "ab044c9340939cf5",
  "orgx_read_plan": "26a06f954b3d4414",
  "orgx_record_plan_edit": "4ae0b64bb9a9fd84",
  "orgx_request_independent_artifact_review": "9c09ef856d5dcd9e",
  "orgx_resume_work": "ef0de71f3defa82d",
  "orgx_retry_work": "9789894662bcb497",
  "orgx_save_plan": "434c8855d8120257",
  "orgx_search": "55045ee6898f8bf9",
  "orgx_start_agent_task": "d28107dc80fdfde4",
  "orgx_start_plan": "27c2e556d801d91c",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_update_work": "9b315a591dacbd15",
  "orgx_validate_initiative_plan": "76fc65c4c1da98f3",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "resume_agent_run": "5c016323dee7914e",
}
`;
